CPH1859: Import zram script from ColorOS
* From full_oppo6771_17065-user 9 PPR1.180610.011 eng.root.20200509.060522 release-keys

Change-Id: I38747a9f68c96e974b65f0f9f984cb9cced9433a
Signed-off-by: Debayan Kar <kardebayan3@gmail.com>

--- a/rootdir/etc/init.mt6771.rc
+++ b/rootdir/etc/init.mt6771.rc
@@ -103,7 +103,7 @@ on charger
 
 #ifdef VENDOR_EDIT
 #huacai.zhou@bsp.drv modify for setting zram size according to totalram size
-service swap_enable_init /system/bin/sh /system/etc/swap_enable.sh
+service swap_enable_init /vendor/bin/sh /vendor/bin/swap_enable.sh
     user root
     disabled
     oneshot
@@ -126,7 +126,7 @@ on fs
     write /proc/sys/vm/page-cluster 0
 #ifdef VENDOR_EDIT
 #huacai.zhou@bsp.drv modify for setting zram size according to totalram size
-    chmod +x /system/etc/swap_enable.sh
+    chmod +x /vendor/bin/swap_enable.sh
     start swap_enable_init
 #else
     #swapon_all /vendor/fstab.enableswap
